[tool.poetry]
name = "detecta-intencion"
version = "0.1.0"
description = ""
authors = ["Lily Perera <lilycapetillo86@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
isort = "^5.12.0"
blue = "^0.9.1"
pip-audit = "^2.6.1"
pandas = "^2.1.0"
openai = "^0.28.1"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
